<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:menuCategory="container"
        android:title=""
        app:showAsAction="ifRoom">

        <item
            android:id="@+id/ChangeGmail"
            android:title="@string/itmGmail"
            app:showAsAction="never" />

        <item
            android:id="@+id/School_WorkLocation"
            android:title="@string/itmSWLoc"
            app:showAsAction="never" />

        <item
            android:id="@+id/HomeLocation"
            android:title="@string/itmHLoc"
            app:showAsAction="never" />

        <item
            android:id="@+id/MapPedometer"
            android:title="@string/btnOpenMap"
            app:showAsAction="never" />

        <item
            android:id="@+id/Console"
            android:title="@string/itmConsole"
            android:visible="false"
            app:showAsAction="never"/>

        <item
            android:id="@+id/ClearDB"
            android:title="@string/itmClearDB"
            android:visible="false"
            app:showAsAction="never"/>

        <item
            android:id="@+id/SetMorningNight"
            android:title="@string/itmSetMorningNight"
            android:visible="false"
            app:showAsAction="never"/>

        <item
            android:id="@+id/ChangePassword"
            android:title="@string/itmChangePassword"
            app:showAsAction="never"/>

        <item
            android:id="@+id/Logout"
            android:title="@string/itmLogout"
            app:showAsAction="never" />

    </item>
</menu>