<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.CyclingOptions">

    <Switch
        android:id="@+id/swPlayHeadphones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotifySwitch"
        android:layout_marginBottom="10dp"/>

    <Switch
        android:id="@+id/swNotificationTTS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/swPlayHeadphones"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="10dp"
        android:text="@string/switchTextToSpeech" />

    <Switch
        android:id="@+id/swAutoReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/swNotificationTTS"
        android:layout_marginTop="11dp"
        android:text="@string/swtichAutoReply" />

    <Switch
        android:id="@+id/swDoNotDisturb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swAutoReply"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="10dp"
        android:text="@string/SpeedSwitch" />


    <Switch
        android:id="@+id/swRecordRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swDoNotDisturb"
        android:layout_marginTop="9dp"
        android:text="@string/switchRecordRoute" />

    <Switch
        android:id="@+id/swCallReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swRecordRoute"
        android:layout_marginTop="6dp"
        android:text="@string/switchReplyToCall" />

    <Button
        android:id="@+id/btnOpenMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swCallReply"
        android:layout_marginTop="10dp"
        android:text="@string/btnOpenMap"
        android:visibility="gone"/>

</RelativeLayout>