<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.WalkingOptions"
    android:background="@drawable/background">

    <Switch
        android:id="@+id/swPlayHeadphones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/spotifySwitch" />

    <Switch
        android:id="@+id/swDoNotDisturb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swPlayHeadphones"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/swPedometer" />

    <Switch
        android:id="@+id/swRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swGPSSpeech"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:text="@string/swDistSpeed"
        tools:text="Show Distance &amp; Speed" />

    <Switch
        android:id="@+id/swGPSSpeech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swDoNotDisturb"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/swTime" />

    <Button
        android:id="@+id/btnOpenMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swCallReply"
        android:layout_marginTop="10dp"
        android:text="@string/btnOpenMap"
        android:visibility="gone" />

    <Switch
        android:id="@+id/swRecordRoute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swRest"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:text="@string/switchRecordRoute" />

    <Switch
        android:id="@+id/swNotificationTTS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/swRecordRoute"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/switchTextToSpeech" />

    <Switch
        android:id="@+id/swAutoReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/swNotificationTTS"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/switchAutoReply" />

    <Switch
        android:id="@+id/swCallReply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/swAutoReply"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="50dp"
        android:text="@string/switchReplyToCall" />

    <Button
        android:id="@+id/button10"
        android:layout_width="133dp"
        android:layout_height="122dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/runningclipart"
        android:text="" />

</RelativeLayout>