<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.forgotPassword"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:text="@string/forgotPassword"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etUsername"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/secretAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spSecretQuestion"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etSecretAnswer"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:id="@+id/spSecretQuestion"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/CancelBtn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@android:color/darker_gray"
        android:shadowRadius="5"
        android:text="@string/btnCancel"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />


    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ConfirmPassword"
        android:layout_alignTop="@+id/CancelBtn"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@android:color/darker_gray"
        android:shadowRadius="5"
        android:text="@string/btnSubmit"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

</RelativeLayout>