<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="27dp"
        android:text="@string/btnRegister"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="114dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etUsername"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etEmail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etConfPass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spSecretQuestion"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"/>

    <EditText
        android:id="@+id/SecretAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spSecretQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etSecretAnswer"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/CancelBtn"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="265dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="13dp"
        android:background="@null"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@android:color/darker_gray"
        android:shadowRadius="5"
        android:text="@string/btnCancel"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />


    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ConfirmPassword"
        android:layout_alignTop="@+id/CancelBtn"
        android:layout_marginStart="239dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@android:color/darker_gray"
        android:shadowRadius="5"
        android:text="@string/btnRegister"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />


</RelativeLayout>