<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.ChangePassword">

    <EditText
        android:id="@+id/OldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etOldPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OldPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etNewPassword"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/etConfPass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ChangePwd"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ConfirmPassword"
        android:layout_alignStart="@+id/ConfirmPassword"
        android:layout_marginStart="121dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="10dp"
        android:fontFamily="sans-serif"
        android:shadowColor="@android:color/darker_gray"
        android:shadowRadius="5"
        android:text="@string/btnChangePwd"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />

</RelativeLayout>